--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
     </nav>
     
           <div class="slideshow">
-            <img src="1.jpg" alt="Dokumentasi PPJ" class="transparent-image">
-            <img src="2.jpg" alt="Dokumentasi PPJ" class="transparent-image">
-            <img src="3.jpg" alt="Dokumentasi PPJ" class="transparent-image">
-            <img src="6.jpg" alt="Dokumentasi PPJ" class="transparent-image">
+            <img src="https://drive.google.com/file/d/1A8pk0ZGIkOty2whT8WrTTuxJus8sK4ET/view?usp=sharing" alt="Dokumentasi PPJ" class="transparent-image">
+            <img src="https://drive.google.com/file/d/1m2Ejoz5QFNeWwRVZDdR9lwkPIqfLFqyX/view?usp=sharing" alt="Dokumentasi PPJ" class="transparent-image">
+            <img src="https://drive.google.com/file/d/1m2Ejoz5QFNeWwRVZDdR9lwkPIqfLFqyX/view?usp=sharing" alt="Dokumentasi PPJ" class="transparent-image">
           </div>
           <div class="tengah">
             <h1>PPJ (Pendamping Posyandu Juara)</h1>
