--- a/index.html
+++ b/index.html
@@ -19,17 +19,12 @@
                 <a href="#">
                     <img src="logo.png" alt="" class="logo">
                 </a>
-                <a class="navkec" href="#"> Kecamatan Wanaraja</a>
+                <a class="navkec" href="/"> Kecamatan Wanaraja</a>
             </li>
             <li class="navbar">
                 <a class="nav-link" href="#visi">Profil</a>
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" >Lembar Kerja</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">SK Pokjanal</a></li>
-                    <li><a class="dropdown-item" href="#"> SK Posyandu</a></li>
-                    <li><a class="dropdown-item" href="#">Laporan Perbulan</a></li>
-                </ul>
-                <a class="nav-link" href="#">Dokumentasi</a>
+                <a class="nav-link" href="skPokjanal.html">SK Pokjanal</a>
+                <a class="nav-link" href="dokumen.html">Dokumen</a>
             </li>
         </ul>
     </nav>
