--- a/skPokjanal.html
+++ b/skPokjanal.html
@@ -19,7 +19,7 @@
                 <a href="#">
                     <img src="logo.png" alt="" class="logo">
                 </a>
-                <a class="navkec" href="/"> Kecamatan Wanaraja</a>
+                <a class="navkec" href="index.html"> Kecamatan Wanaraja</a>
             </li>
             <li class="navbar">
                 <a class="nav-link" href="#visi">Profil</a>
