--- a/dokumen.html
+++ b/dokumen.html
@@ -19,7 +19,7 @@
                 <a href="#">
                     <img src="logo.png" alt="" class="logo">
                 </a>
-                <a class="navkec" href="/"> Kecamatan Wanaraja</a>
+                <a class="navkec" href="index.html"> Kecamatan Wanaraja</a>
             </li>
             <li class="navbar">
                 <a class="nav-link" href="#visi">Profil</a>
@@ -30,6 +30,7 @@
     </nav>
     <h3>Materi</h3>
     <a href="https://docs.google.com/presentation/d/119HQWT1ZPhdVuu7LWDpEtKZ4D0g92KTw/edit?usp=drive_link&ouid=112035658901484472208&rtpof=true&sd=true">KPI PPJ</a>
+</br>
     <a href="https://docs.google.com/presentation/d/1GdlX9vARMgSh8L9hCFmm5T1Yr-26yS8Z/edit?usp=drive_link&ouid=112035658901484472208&rtpof=true&sd=true">POSYANDU center Of Excelent</a>
     <footer class="footer">
         <i class="fa-brands fa-facebook"></i>
